--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
     "prettier": "^3.0.0"
-  }
+  },
+  "name": "3d-course-hw",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write ./card-game/"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
