--- a/package.json
+++ b/package.json
@@ -14,16 +14,23 @@
         "lint:js": "eslint ./card-game/**/*.js",
         "lint:css": "stylelint ./card-game/**/*.css",
         "lint": "npm run lint:js && npm run lint:css",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "start": "webpack-dev-server --open",
+        "build": "cross-env NODE_ENV=production webpack"
     },
     "author": "",
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "copy-webpack-plugin": "^11.0.0",
+        "cross-env": "^7.0.3",
         "css-loader": "^6.8.1",
+        "html-webpack-plugin": "^5.5.3",
         "husky": "^8.0.3",
         "stylelint": "^15.10.2",
         "stylelint-config-standard": "^34.0.0",
-        "stylelint-prettier": "^4.0.0"
+        "stylelint-prettier": "^4.0.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
     }
 }
